recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
  spiral(steps - 1, angle, length + increment)
        ^